--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <header class="header"><button class="logo">All your ideas</button></header>
   <app-root></app-root>
 </body>
 </html>
